side bar issues on mobile

--- a/blocks/split/_split.scss
+++ b/blocks/split/_split.scss
@@ -48,9 +48,4 @@
             }
         }
     }
-
-    // fullScreen
-    &-fullScreen {
-        overflow-y: hidden;
-    }
 }
